SUBDIRS = \
	src	\
	po	\
	data	\
	help

EXTRA_DIST = \
	autogen.sh		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	zenity.spec		\
	zenity.spec.in		\
	COPYING			\
	HACKING			\
	ChangeLog		\
	NEWS			\
	README			\
	AUTHORS			\
	gnome-doc-utils.make

DISTCLEANFILES =                \
	intltool-extract        \
	intltool-merge          \
	intltool-update		\
	gnome-doc-utils.make

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
