SUBDIRS = \
	src	\
	po	\
	data	\
	help

EXTRA_DIST = \
	autogen.sh		\
	COPYING			\
	HACKING			\
	ChangeLog		\
	NEWS			\
	README			\
	AUTHORS			\
	gnome-doc-utils.make

DISTCLEANFILES =                \
	intltool-extract        \
	intltool-merge          \
	intltool-update		\
	gnome-doc-utils.make

DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper
