clothesdir = $(datadir)/zenity/clothes
clothes_DATA = \
	monk.png		\
	gnome-tshirt.png	\
	sunglasses.png		\
	surfboard.png		\
	hawaii-shirt.png

imagesdir = $(datadir)/zenity
images_DATA = \
	zenity.png		\
	zenity-calendar.png	\
	zenity-list.png		\
	zenity-file.png		\
	zenity-progress.png	\
	zenity-text.png		\
	zenity-scale.png	\
	zenity-entry.png	\
	zenity-notification.png

man_MANS = zenity.1

EXTRA_DIST = $(images_DATA) $(clothes_DATA) $(man_MANS)
