install_man('zenity.1')

install_data(
  ['zenity.png', 
    'zenity-calendar.png',
    'zenity-list.png',
    'zenity-file.png',
    'zenity-progress.png',
    'zenity-text.png',
    'zenity-scale.png',
    'zenity-entry.png',
    'zenity-notification.png']
  )

install_data(
  ['monk.png',
    'gnome-tshirt.png',
    'sunglasses.png',
    'surfboard.png',
    'hawaii-shirt.png'],
  install_dir: join_paths(zenity_datadir, 'clothes')
  )
