include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = zenity
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = figures/zenity-calendar-screenshot.png figures/zenity-entry-screenshot.png figures/zenity-error-screenshot.png figures/zenity-fileselection-screenshot.png figures/zenity-information-screenshot.png figures/zenity-list-screenshot.png figures/zenity-notification-screenshot.png figures/zenity-progress-screenshot.png figures/zenity-question-screenshot.png figures/zenity-text-screenshot.png figures/zenity-warning-screenshot.png

DOC_LINGUAS = bg cs da de el en_GB es eu fi fr oc pt_BR ru sv uk
