include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = zenity
DOC_INCLUDES = legal.xml

DOC_FIGURES = \
	figures/zenity-calendar-screenshot.png		\
	figures/zenity-colorselection-screenshot.png	\
	figures/zenity-entry-screenshot.png		\
	figures/zenity-error-screenshot.png		\
	figures/zenity-fileselection-screenshot.png	\
	figures/zenity-forms-screenshot.png		\
	figures/zenity-information-screenshot.png	\
	figures/zenity-list-screenshot.png		\
	figures/zenity-notification-screenshot.png	\
	figures/zenity-password-screenshot.png		\
	figures/zenity-progress-screenshot.png		\
	figures/zenity-scale-screenshot.png		\
	figures/zenity-question-screenshot.png		\
	figures/zenity-text-screenshot.png		\
	figures/zenity-warning-screenshot.png

DOC_PAGES = \
	calendar.page		\
	color-selection.page	\
	entry.page		\
	error.page		\
	file-selection.page	\
	forms.page		\
	index.page		\
	info.page		\
	intro.page		\
	list.page		\
	message.page		\
	notification.page	\
	password.page		\
	progress.page		\
	question.page		\
	scale.page		\
	text.page		\
	usage.page		\
	warning.page

DOC_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl hu ja oc pt_BR ru sl sv uk zh_CN
