help_pages = [
  'legal.xml',
  'calendar.page',
  'color-selection.page',
  'entry.page',
  'error.page',
  'file-selection.page',
  'forms.page',
  'index.page',
  'info.page',
  'intro.page',
  'list.page',
  'message.page',
  'notification.page',
  'password.page',
  'progress.page',
  'question.page',
  'scale.page',
  'text.page',
  'usage.page',
  'warning.page'
]

help_media = [
  'figures/zenity-calendar-screenshot.png',
  'figures/zenity-colorselection-screenshot.png',
  'figures/zenity-entry-screenshot.png',
  'figures/zenity-error-screenshot.png',
  'figures/zenity-fileselection-screenshot.png',
  'figures/zenity-forms-screenshot.png',
  'figures/zenity-information-screenshot.png',
  'figures/zenity-list-screenshot.png',
  'figures/zenity-notification-listen-screenshot.png',
  'figures/zenity-notification-screenshot.png',
  'figures/zenity-password-screenshot.png',
  'figures/zenity-progress-screenshot.png',
  'figures/zenity-question-screenshot.png',
  'figures/zenity-scale-screenshot.png',
  'figures/zenity-text-screenshot.png',
  'figures/zenity-warning-screenshot.png'
]

gnome.yelp(
  meson.project_name(),
  sources: help_pages,
  media: help_media,
  symlink_media: false
)
